@@ -28,6 +28,80 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|fs
+operator|.
+name|permission
+operator|.
+name|AclEntryScope
+operator|.
+name|*
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|fs
+operator|.
+name|permission
+operator|.
+name|AclEntryType
+operator|.
+name|*
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|fs
+operator|.
+name|permission
+operator|.
+name|FsAction
+operator|.
+name|*
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|server
+operator|.
+name|namenode
+operator|.
+name|AclTestHelpers
+operator|.
+name|*
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|test
 operator|.
 name|MetricsAsserts
@@ -61,6 +135,18 @@ operator|.
 name|Assert
 operator|.
 name|assertEquals
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
+name|assertFalse
 import|;
 end_import
 
@@ -465,6 +551,22 @@ operator|.
 name|fs
 operator|.
 name|Path
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|fs
+operator|.
+name|permission
+operator|.
+name|AclEntry
 import|;
 end_import
 
@@ -7590,6 +7692,340 @@ name|delta
 argument_list|)
 argument_list|)
 expr_stmt|;
+block|}
+comment|/**    * Edit log op instances are cached internally using thread-local storage.    * This test checks that the cached instances are reset in between different    * transactions processed on the same thread, so that we don't accidentally    * apply incorrect attributes to an inode.    *    * @throws IOException if there is an I/O error    */
+annotation|@
+name|Test
+DECL|method|testResetThreadLocalCachedOps ()
+specifier|public
+name|void
+name|testResetThreadLocalCachedOps
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|Configuration
+name|conf
+init|=
+operator|new
+name|HdfsConfiguration
+argument_list|()
+decl_stmt|;
+name|conf
+operator|.
+name|setBoolean
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_NAMENODE_ACLS_ENABLED_KEY
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+comment|// Set single handler thread, so all transactions hit same thread-local ops.
+name|conf
+operator|.
+name|setInt
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_NAMENODE_HANDLER_COUNT_KEY
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
+name|MiniDFSCluster
+name|cluster
+init|=
+literal|null
+decl_stmt|;
+name|FileSystem
+name|fileSys
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|cluster
+operator|=
+operator|new
+name|MiniDFSCluster
+operator|.
+name|Builder
+argument_list|(
+name|conf
+argument_list|)
+operator|.
+name|numDataNodes
+argument_list|(
+literal|1
+argument_list|)
+operator|.
+name|build
+argument_list|()
+expr_stmt|;
+name|cluster
+operator|.
+name|waitActive
+argument_list|()
+expr_stmt|;
+name|fileSys
+operator|=
+name|cluster
+operator|.
+name|getFileSystem
+argument_list|()
+expr_stmt|;
+comment|// Create /dir1 with a default ACL.
+name|Path
+name|dir1
+init|=
+operator|new
+name|Path
+argument_list|(
+literal|"/dir1"
+argument_list|)
+decl_stmt|;
+name|fileSys
+operator|.
+name|mkdirs
+argument_list|(
+name|dir1
+argument_list|)
+expr_stmt|;
+name|List
+argument_list|<
+name|AclEntry
+argument_list|>
+name|aclSpec
+init|=
+name|Lists
+operator|.
+name|newArrayList
+argument_list|(
+name|aclEntry
+argument_list|(
+name|DEFAULT
+argument_list|,
+name|USER
+argument_list|,
+literal|"foo"
+argument_list|,
+name|READ_EXECUTE
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|fileSys
+operator|.
+name|modifyAclEntries
+argument_list|(
+name|dir1
+argument_list|,
+name|aclSpec
+argument_list|)
+expr_stmt|;
+comment|// /dir1/dir2 is expected to clone the default ACL.
+name|Path
+name|dir2
+init|=
+operator|new
+name|Path
+argument_list|(
+literal|"/dir1/dir2"
+argument_list|)
+decl_stmt|;
+name|fileSys
+operator|.
+name|mkdirs
+argument_list|(
+name|dir2
+argument_list|)
+expr_stmt|;
+comment|// /dir1/file1 is expected to clone the default ACL.
+name|Path
+name|file1
+init|=
+operator|new
+name|Path
+argument_list|(
+literal|"/dir1/file1"
+argument_list|)
+decl_stmt|;
+name|fileSys
+operator|.
+name|create
+argument_list|(
+name|file1
+argument_list|)
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+comment|// /dir3 is not a child of /dir1, so must not clone the default ACL.
+name|Path
+name|dir3
+init|=
+operator|new
+name|Path
+argument_list|(
+literal|"/dir3"
+argument_list|)
+decl_stmt|;
+name|fileSys
+operator|.
+name|mkdirs
+argument_list|(
+name|dir3
+argument_list|)
+expr_stmt|;
+comment|// /file2 is not a child of /dir1, so must not clone the default ACL.
+name|Path
+name|file2
+init|=
+operator|new
+name|Path
+argument_list|(
+literal|"/file2"
+argument_list|)
+decl_stmt|;
+name|fileSys
+operator|.
+name|create
+argument_list|(
+name|file2
+argument_list|)
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+comment|// Restart and assert the above stated expectations.
+name|IOUtils
+operator|.
+name|cleanup
+argument_list|(
+name|LOG
+argument_list|,
+name|fileSys
+argument_list|)
+expr_stmt|;
+name|cluster
+operator|.
+name|restartNameNode
+argument_list|()
+expr_stmt|;
+name|fileSys
+operator|=
+name|cluster
+operator|.
+name|getFileSystem
+argument_list|()
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|fileSys
+operator|.
+name|getAclStatus
+argument_list|(
+name|dir1
+argument_list|)
+operator|.
+name|getEntries
+argument_list|()
+operator|.
+name|isEmpty
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|fileSys
+operator|.
+name|getAclStatus
+argument_list|(
+name|dir2
+argument_list|)
+operator|.
+name|getEntries
+argument_list|()
+operator|.
+name|isEmpty
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|fileSys
+operator|.
+name|getAclStatus
+argument_list|(
+name|file1
+argument_list|)
+operator|.
+name|getEntries
+argument_list|()
+operator|.
+name|isEmpty
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|fileSys
+operator|.
+name|getAclStatus
+argument_list|(
+name|dir3
+argument_list|)
+operator|.
+name|getEntries
+argument_list|()
+operator|.
+name|isEmpty
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|fileSys
+operator|.
+name|getAclStatus
+argument_list|(
+name|file2
+argument_list|)
+operator|.
+name|getEntries
+argument_list|()
+operator|.
+name|isEmpty
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|IOUtils
+operator|.
+name|cleanup
+argument_list|(
+name|LOG
+argument_list|,
+name|fileSys
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|cluster
+operator|!=
+literal|null
+condition|)
+block|{
+name|cluster
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 block|}
 block|}
 end_class
